--- a/CV_ManagementSystem/Reports/ReportFullTemp_2.rdlc
+++ b/CV_ManagementSystem/Reports/ReportFullTemp_2.rdlc
@@ -2373,7 +2373,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox6</rd:DefaultName>
-          <Top>0.12342cm</Top>
+          <Top>0.28217cm</Top>
           <Left>14.84838cm</Left>
           <Height>0.54708cm</Height>
           <Width>1.46285cm</Width>
@@ -2407,7 +2407,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox6</rd:DefaultName>
-          <Top>0.63346cm</Top>
+          <Top>0.79221cm</Top>
           <Left>14.84838cm</Left>
           <Height>0.46771cm</Height>
           <Width>1.46285cm</Width>
@@ -2441,7 +2441,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox6</rd:DefaultName>
-          <Top>1.17333cm</Top>
+          <Top>1.33208cm</Top>
           <Left>14.84838cm</Left>
           <Height>0.46771cm</Height>
           <Width>1.46285cm</Width>
@@ -2475,7 +2475,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox6</rd:DefaultName>
-          <Top>0.12342cm</Top>
+          <Top>0.28217cm</Top>
           <Left>16.34651cm</Left>
           <Height>0.54708cm</Height>
           <Width>4.45437cm</Width>
@@ -2509,7 +2509,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox6</rd:DefaultName>
-          <Top>0.63346cm</Top>
+          <Top>0.79221cm</Top>
           <Left>16.34651cm</Left>
           <Height>0.46771cm</Height>
           <Width>4.45437cm</Width>
@@ -2543,7 +2543,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox6</rd:DefaultName>
-          <Top>1.17333cm</Top>
+          <Top>1.33208cm</Top>
           <Left>16.34651cm</Left>
           <Height>0.46771cm</Height>
           <Width>4.45437cm</Width>
@@ -2555,6 +2555,7 @@
             <VerticalAlign>Top</VerticalAlign>
             <PaddingLeft>2pt</PaddingLeft>
             <PaddingRight>2pt</PaddingRight>
+            <PaddingTop>2pt</PaddingTop>
             <PaddingBottom>2pt</PaddingBottom>
           </Style>
         </Textbox>
