--- a/ReportSection/Reports/ReportFullTemp_2.rdlc
+++ b/ReportSection/Reports/ReportFullTemp_2.rdlc
@@ -117,6 +117,7 @@
                           <Style>None</Style>
                         </Border>
                         <BottomBorder>
+                          <Color>#135592</Color>
                           <Style>Solid</Style>
                           <Width>1.5pt</Width>
                         </BottomBorder>
@@ -326,7 +327,7 @@
                           <Style>None</Style>
                         </Border>
                         <BottomBorder>
-                          <Color>Black</Color>
+                          <Color>#135592</Color>
                           <Style>Solid</Style>
                           <Width>1.5pt</Width>
                         </BottomBorder>
@@ -2344,7 +2345,7 @@
           <Source>Embedded</Source>
           <Value>ECC50YearLogo</Value>
           <Sizing>FitProportional</Sizing>
-          <Top>0.34925cm</Top>
+          <Top>0.39511cm</Top>
           <Left>0.3175cm</Left>
           <Height>1.43466cm</Height>
           <Width>5.16819cm</Width>
@@ -2372,7 +2373,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox6</rd:DefaultName>
-          <Top>0.12342cm</Top>
+          <Top>0.28217cm</Top>
           <Left>14.84838cm</Left>
           <Height>0.54708cm</Height>
           <Width>1.46285cm</Width>
@@ -2406,7 +2407,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox6</rd:DefaultName>
-          <Top>0.63346cm</Top>
+          <Top>0.79221cm</Top>
           <Left>14.84838cm</Left>
           <Height>0.46771cm</Height>
           <Width>1.46285cm</Width>
@@ -2440,7 +2441,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox6</rd:DefaultName>
-          <Top>1.17333cm</Top>
+          <Top>1.33208cm</Top>
           <Left>14.84838cm</Left>
           <Height>0.46771cm</Height>
           <Width>1.46285cm</Width>
@@ -2474,7 +2475,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox6</rd:DefaultName>
-          <Top>0.12342cm</Top>
+          <Top>0.28217cm</Top>
           <Left>16.34651cm</Left>
           <Height>0.54708cm</Height>
           <Width>4.45437cm</Width>
@@ -2508,7 +2509,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox6</rd:DefaultName>
-          <Top>0.63346cm</Top>
+          <Top>0.79221cm</Top>
           <Left>16.34651cm</Left>
           <Height>0.46771cm</Height>
           <Width>4.45437cm</Width>
@@ -2542,7 +2543,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox6</rd:DefaultName>
-          <Top>1.17333cm</Top>
+          <Top>1.33208cm</Top>
           <Left>16.34651cm</Left>
           <Height>0.46771cm</Height>
           <Width>4.45437cm</Width>
